# basic-rag-llm

./: .gitignore  PROJECT.md  README.md  app.py  pyproject.toml
processed/: Analyzing Corporate Privacy Policies using AI Chatbots.md
src/: __init__.py  chunker.py  config.py  document_processor.py  embeddings.py  generator_ollama.py  retriever.py  vector_store.py
